--- a/Main.html
+++ b/Main.html
@@ -1,8 +1,8 @@
 <div class="con">
     <div class="pfp">
         <p>Check links to see all R( Roblox),Gw( Git websites), and G( Git programs)</p>
-        <a href="https://www.roblox.com/users/4885006853/profile">Roblox Profile</a>
-        <a href="https://github.com/blobo784">Github Profile</a>
+        <a href="https://www.roblox.com/users/4885006853/profile" target="_blank">Roblox Profile</a>
+        <a href="https://github.com/blobo784" target="_blank">Github Profile</a>
     </div>
     <div class="space"></div>
     <div class="op">
